--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,6 @@
 #sponsor-section, #meet-the-team, #awards-section, #charity-section, #our-speakers, #about-section, #trailer, #event-details {
   padding: 35px 40px 35px 40px;
+  width: 100%;
 }
 
 #meet-the-team a, #our-speakers #speaker-history-row a {
@@ -43,8 +44,14 @@
   transition: transform 0s 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275), opacity 0s 0.2s;
 }
 
+.row {
+  align-items: center;
+  width: 100%;
+}
+
 .separator {
   border-left: 6px solid #031e63;
+  min-height: 100%;
 }
 
 .btn {
@@ -87,6 +94,13 @@ h1 {
 }
 #main-nav .dropdown:hover > .dropdown-menu {
   display: block;
+}
+#main-nav .btn {
+  background-color: #e62954;
+  color: #d8d7d7 !important;
+}
+#main-nav .btn:hover {
+  color: #031e63 !important;
 }
 #main-nav a {
   margin-right: 5px;
@@ -141,19 +155,21 @@ h1 {
   }
 }
 #event-details {
-  height: 45vh;
   background-color: #e62954;
   display: flex;
 }
 #event-details .event-social-column {
-  width: 40%;
-  line-height: 12vh;
+  height: 100%;
 }
 #event-details .event-social-column #social-column {
   list-style: none;
   text-align: right;
-  margin-right: 5vw;
+  margin-right: 3vw;
   font-size: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 100%;
 }
 #event-details .event-social-column #social-column a {
   text-decoration: none;
@@ -168,11 +184,6 @@ h1 {
 }
 #event-details .event-social-column #social-column .fa-instagram {
   margin-right: 3px;
-}
-#event-details .venue-time {
-  width: 60%;
-  margin-left: 5vw;
-  padding-top: 6vh;
 }
 #event-details .venue-time .date {
   font-size: 3.5em;
@@ -192,24 +203,17 @@ h1 {
 }
 
 #about-section {
-  height: 300px;
   background-color: #e62954;
   display: flex;
 }
 #about-section .about-heading {
-  width: 40%;
   color: #031e63;
   text-align: right;
-  padding: 10vh 60px;
+  padding-right: 50px;
 }
 #about-section .about-details {
   color: white;
   text-align: left;
-  width: 60%;
-  padding: 10vh 55px;
-}
-#about-section .column {
-  flex: 50%;
 }
 
 #our-speakers {
@@ -300,28 +304,22 @@ h1 {
 }
 
 #charity-section {
-  height: 300px;
   background-color: #e62954;
   display: flex;
 }
 #charity-section .charity-heading {
-  width: 40%;
   color: #031e63;
   text-align: left;
-  padding: 7vh 60px;
+  padding-left: 50px;
 }
 #charity-section .charity-heading h2 {
   font-size: 2.5em;
   color: white;
 }
 #charity-section .charity-details {
-  width: 60%;
   color: white;
   text-align: right;
-  padding: 5vh 55px;
-}
-#charity-section .charity-details p {
-  padding-top: 10px;
+  padding-right: 50px;
 }
 
 #awards-section {
