--- a/styles/index.scss
+++ b/styles/index.scss
@@ -311,7 +311,7 @@ h1 {
         }
 
         .speaker-div {
-            flex: 16.67%;
+            // flex: 16.67%;
             height: 500px;
             position: relative;
         }
